--- a/src/styles.css
+++ b/src/styles.css
@@ -1,19 +1,18 @@
-/*basic styling for template at the start*/
 body {
-  background-color: #282c34;
-  color: white;
-  font-family: "Times New Roman", Times, serif;
-  font-size: 16px;
-  text-align: center;
-  padding: 20px;
+  font-family: Roboto, Helvetica, sans-serif;
 }
-p {
-  color: #61dafb;
-  font-size: 18px;
-  margin: 10px 0;
+
+table {
+  border: 1px solid #eee;
+  border-collapse: collapse;
 }
-h1 {
-  color: #bd9ee9;
-  font-size: 56px;
-  margin-bottom: 20px;
+
+td, th {
+  margin: 0;
+  border: 0;
+  padding: 10px;
+}
+
+tr:nth-child(even) {
+  background-color: #eee;
 }
